	*** RELEASE 8.3.10 ***

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3713
        Vitali Perchonok is com gmail from vitali.pe
	Graphical improvements. Images taken from openclipart.

	Matieu Ignacio: New original background for the target activity.

	* src/boards/reversecount.c: (reversecount_next_level),
	(reversecount_create_item), (item_event), (create_clock),
	(update_clock):
	* src/boards/target.c: (display_windspeed), (target_create_item),
	(request_score):
	* src/gcompris/timer.c: (gc_timer_display), (start_animation):
	* src/gcompris/timer.h:

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3712
	Vitali Perchonok is com gmail from vitali.pe
	Fixed for RTL.

	* src/boards/wordsgame.c: (wordsgame_create_item):

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3711
	Vitali Perchonok is com gmail from vitali.pe
	Fixed crash bug when board finished.

	* src/boards/python/redraw.py:

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3710
	Vitali Perchonok is com gmail from vitali.pe
	Fixed crash bug when changing level while dragging an item  (2 click drag mode)

	* src/boards/shapegame.c: (shapegame_next_level):

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3709
	Vitali Perchonok is com gmail from vitali.pe
	Added RTL support.

	* src/boards/reading.c: (start_board), (reading_next_level),
	(reading_create_item):

2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3708
	Vitali Perchonok is com gmail from vitali.pe
	Prevent an evil crash bug when the kids press 2 buttons at the same time

	* src/boards/menu2.c: (item_event):

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3707
	Vitali Perchonok is com gmail from vitali.pe
	Fixed small bug (2 player mode) -> show happy flower even if player 2 wins

	* src/boards/python/connect4.py:

2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	From trunk 3706
	Vitali Perchonok is com gmail from vitali.pe